# task_manager

./: CMakeLists.txt  README.md
include/task_manager/: CommandLineProcessor.h  SimpleCommandLineProcessor.h  SimpleTaskManager.h  StringUtils.h
source/: CommandLineProcessor.cpp  SimpleCommandLineProcessor.cpp  SimpleTaskManager.cpp  StringUtils.cpp  main.cpp
